# RCA-PDF-extraction-pipeline

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  pyproject.toml  requirements.txt
.claude/: project.json  settings.json
.github/: FUNDING.yml
data/output/: core_analysis_minimal.json
docs/: 00003-file-inventory.md
docs/adrs/: 0001-header-variation-strategy.md  0002-github-wiki-sidebar-customization.md
docs/audit/: audit-report.json  audit-report.md
docs/audit-results/: 2026-01-29.md
docs/context/: README.md
docs/ideas/: 001-automated-data-validation.md  004-header-normalization-across-pages.md  010-code-modularity-refactor.md
docs/lessons-learned/: 001-parsing-logic-reuse.md
docs/lineage/: audit-report.json  audit-report.md  workflow-audit.jsonl
docs/lld/: lld-status.json
docs/research/: Software specification - Automated Subsurface Data Ingestion Pipeline.md  This Software Design Specification (SDS) outlines
docs/runbooks/: 001-manual-verification.md
docs/session-logs/: 2026-01-29.md  2026-02-02.md
docs/standards/: 00801-audit-methodology.md
docs/wiki/: Architecture.md  Assignment-Requirements.md  Clean-Code.md  Code-Quality.md  Extensions.md  Home.md  Performance.md  Quo-Vadis.md  Requirements.md  (+1 more)
scripts/: audit.py  run-all-llds.sh
src/: __init__.py  core_analysis.py  core_analysis_minimal.py  main.py  models.py  page_classifier.py  pdf_dissector.py  table_extractor.py
tests/: __init__.py  conftest.py  test_core_analysis.py  test_csv_sanitizer.py  test_footnote_symbols.py  test_header_extraction.py  test_header_preservation.py
(+388 files in other folders)
