[project]
name = "rca-extraction"
version = "0.1.0"
description = "Routine Core Analysis PDF Extraction Pipeline"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
dependencies = [
    "PyMuPDF>=1.24.0",
    "flask>=3.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
legacy = [
    "pdfplumber>=0.11.0",
    "pandas>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pylint>=3.0.0",
]

[project.scripts]
core-analysis = "src.core_analysis:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "src"}]
